--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -1,5 +1,4 @@
-# Monitoring the Power Platform: Canvas Driven Apps Part 1 - Power Apps Analytics
-
+# Monitoring the Power Platform: For PowerApps Portal
 ## Summary
 
 Instrumentation of Power Apps Canvas Applications is a feature first released in a preview of the Release Wave 1 for 2020. This out of the box capability allows for the capturing and examination of usage and performance metrics. This article will focus on current tooling available and describing the steps to setup Azure Application Insights within a Canvas Application. We will also examine the currently available events and metrics sent from an application and how to work with the Monitoring Tool.
@@ -17,6 +16,8 @@ For example, imagine having an excel spreadsheet your team works on to track exp
 Finally, the Canvas App community is extensive and a great place to collaborate and contribute ideas and discussions: https://aka.ms/powerapps-community
 
 ## Power Apps Analytics
+
+
 
 
 
