updated power automate analytics article to include created report

--- a/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
+++ b/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
@@ -42,7 +42,7 @@ The Flows in use chart can help see track the most triggered flow in the filtere
 
 <insert flows in use chart>
 
-[The **Created** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#created-report) is designed to assist with overall app quality by surfacing error trends and types to admins. Errors can be **filtered by device platform**, **player version** and **regionally**. **Error totals** are shown in a tabular list while a donut chart shows the **overall count of errors by HTTP status** (e.g. 404, 500, etc).
+[The **Created** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#created-report) displays the **types of flows created**, **trends** and **specific details** about created flows such as the **created date** and **email**.
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/powerapps-analytics-toast-errors.png" style="zoom: 67%;" />
 
 For reviewing performance bottlenecks and API calls, admins can leverage [the **Service Performance** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#what-are-the-available-reports) for connection health. Admins can gain insights into the **least and best performing services**, the mean **response time and success rate for connectors** and the **50th, 75th and 95th percentile markers for response time**. Each of these can be **filtered** down by service or connector, device, player version and regionally.
