added link to Power Automate branch Sample for D365

--- a/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
+++ b/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
@@ -38,7 +38,7 @@ With the appropriate permissions, an admin will land on the **Usage** report for
 
 <insert usage image>
 
-The Flows in use chart can help see track the most triggered flow in the filtered data. In my scenario, I had an unusual number of daily flows from the Runs report and was able to isolate to the specific flow causing the increase. In the chart the "**Get D365 Msgs and Fire Pipeline**" [flow which monitors the Office 365 Communications API for current health and messages](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-dynamics-365-ce-service-health-and-messages-using-the-microsoft-office-365-service-communications-api). A sample of this flow is located **here.** Further analysis of the capabilities of the Office 365 Service and Communications API are covered in another article related to overall service health.
+The Flows in use chart can help see track the most triggered flow in the filtered data. In my scenario, I had an unusual number of daily flows from the Runs report and was able to isolate to the specific flow causing the increase. In the chart the "**Get D365 Msgs and Fire Pipeline**" [flow which monitors the Office 365 Communications API for current health and messages](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-dynamics-365-ce-service-health-and-messages-using-the-microsoft-office-365-service-communications-api). A sample of this flow is located **[here](https://github.com/aliyoussefi/MonitoringPowerPlatform/raw/PowerAutomate/Samples/GetDynamics365MessagesfromtheOffice365CommunicationsAPI_20200410121038.zip).** Further analysis of the capabilities of the Office 365 Service and Communications API are covered in another article related to overall service health.
 
 <insert flows in use chart>
 
