added Error and Shared report verbaige

--- a/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
+++ b/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
@@ -43,43 +43,43 @@ The Flows in use chart can help see track the most triggered flow in the filtere
 <insert flows in use chart>
 
 [The **Created** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#created-report) displays the **types of flows created**, **trends** and **specific details** about created flows such as the **created date** and **email**.
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/powerapps-analytics-toast-errors.png" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Created.JPG" style="zoom: 67%;" />
 
-For reviewing performance bottlenecks and API calls, admins can leverage [the **Service Performance** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#what-are-the-available-reports) for connection health. Admins can gain insights into the **least and best performing services**, the mean **response time and success rate for connectors** and the **50th, 75th and 95th percentile markers for response time**. Each of these can be **filtered** down by service or connector, device, player version and regionally.
+[The **Errors** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#error-report), will provide data points for recurring error counts and the creator's email address and the last time it occurred. 
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/Analytics-ServicePerformance.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Errors.JPG" style="zoom: 67%;" />
 
-Below is an example of the **percentile markers chart**. What this means is on 3/17/2020 50% of the service responses completed within 2.2 seconds. 75% completed within 49 seconds, and 95% within 49.2 seconds. Looking at the trends in this chart we can see the 17th is an outlier compared to the other dates.
+[The **Shared** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#shared-report) is important to understand which flows are shared and which are trending up in shares. This is useful for an analysis on flows that have have become extremely valuable to your organization where users are requesting and sharing often. This could also help call out when a flow may need to be reviewed for possible security and performance considerations.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/Analytics-ServicePerformance-responsetime.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Shared.JPG" style="zoom: 67%;" />
 
 Examining the Successful connection requests chart I see only 37.5% completed on 3/17 with only 8 requests. 
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/Analytics-ServicePerformance-successful-3-17.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
 
 Choosing a date with a bigger sample size, I see 53 requests from 4/6 with 100% completion.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/Analytics-ServicePerformance-successful-4-6.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
 
 Looking back at the service response time chart for 4/6 I see the **95th percentile is 5 seconds**.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/Analytics-ServicePerformance-responsetime-4-6.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
 
 Finally, [the **Connectors** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#what-are-the-available-reports) can help shed light on the relationship between connectors and apps. A very useful metric in this report is **Shares**, which shows the number of shares of an app to admin. As described in the sample scenario from the official documentation, this could prove useful to understand and take action on potentially shared sensitive data.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/Analytics-Connectors.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
 
 #### Filtering the data returned
 
 The Power Apps Analytics will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#how-do-i-change-environments), click the "**Change filters**" button for any dashboard.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/Analytics-Filters.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
 
 #### Export data for Analysis
 
 Currently the ability to export from the Power Platform Admin Center is not available as it is with the Common Data Service for Analytics. I would expect this to change and will update this article once more information is available. Until then [**most charts can be exported via the ellipsis**](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#how-can-i-download-the-reports) like other Power BI reports. 
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/powerapps-analytics-export-data.png" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
 
 ## Service Health within the Power Platform Admin Center
 
