Power Automate Analytics Update - Connectors Report and images

--- a/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
+++ b/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
@@ -42,6 +42,8 @@ The Flows in use chart can help see track the most triggered flow in the filtere
 
 <insert flows in use chart>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Created.JPG" style="zoom: 67%;" />
+
 [The **Created** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#created-report) displays the **types of flows created**, **trends** and **specific details** about created flows such as the **created date** and **email**.
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Created.JPG" style="zoom: 67%;" />
 
@@ -53,21 +55,9 @@ The Flows in use chart can help see track the most triggered flow in the filtere
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Shared.JPG" style="zoom: 67%;" />
 
-Examining the Successful connection requests chart I see only 37.5% completed on 3/17 with only 8 requests. 
+Finally, [the **Connectors** report]() let's admins examine the various connectors used within Power Automate flows. Metrics such as most used connectors, which ones are used across different flows, and number of connector calls are available in this report. By choosing a specific connector, admins can drill down to find how many times a flow ran and compare this to the number of connector calls. This can help determine which flows are using a specific connector more than others and could possibly be tuned to be less chatty.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
-
-Choosing a date with a bigger sample size, I see 53 requests from 4/6 with 100% completion.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
-
-Looking back at the service response time chart for 4/6 I see the **95th percentile is 5 seconds**.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
-
-Finally, [the **Connectors** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#what-are-the-available-reports) can help shed light on the relationship between connectors and apps. A very useful metric in this report is **Shares**, which shows the number of shares of an app to admin. As described in the sample scenario from the official documentation, this could prove useful to understand and take action on potentially shared sensitive data.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Connectors.JPG" style="zoom: 67%;" />
 
 #### Filtering the data returned
 
