Power Automate Analytics article complete. Requesting Peer Review

--- a/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
+++ b/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
@@ -12,11 +12,11 @@ The article will also go into the **Analytics feature** available in the **My Fl
 
 ### Power Automate Analytics in the Power Platform Admin Center
 
-The Power Automate Analytics feature in the Power Platform Admin Center allows administrators to run reports for insights into flow usage, errors and the various connectors and flows their organization are creating.
+The **Power Automate Analytics** feature in the **Power Platform Admin Center** allows administrators to run reports for insights into flow usage, errors and the various connectors and flows their organization are creating.
 
 **<u>The data in these reports is refreshed about every 3 hours and is retained for 28 days</u>**. To find the last refresh date, look in the upper right hand corner of the Analytics window.
 
-<insert lastrefreshtime image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/LastRefreshTime.JPG"  />
 
 #### Who can access this data?
 
@@ -26,23 +26,21 @@ As shown in [this article](https://docs.microsoft.com/en-us/power-platform/admin
 
 With the appropriate permissions, an admin will land on the **Usage** report for Power Apps Analytics. 
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAppsAnalytics/navigateTo.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
 
 #### Power Automate Reports
 
-[The **Runs** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#runs-report) displays **daily, weekly and monthly runs for all flows in a specific environment**. This can prove useful to understanding if a new or existing flow introduced has been causing a spike in usage. or instance if I had a reoccurring integration utilizing flows I may come here to see a daily count. If I see a spike in failed or cancelled runs, I can move to the Errors report for additional information.
+[The **Runs** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#runs-report) displays **daily, weekly and monthly runs for all flows in a specific environment**. This can prove useful to understanding if a new or existing flow introduced has been causing a spike in usage. or instance if I had a reoccurring integration utilizing flows I may come here to see a daily count. <u>If I see a spike in failed or cancelled runs, I can move to the Errors report for additional information.</u>
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
 
 [The **Usage** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#usage-report) shows the **current flows in use and the overall trends of flows**. Admins can also see **how flows are triggered**, such as **system events** like a CDS update to a **scheduled task** or **button click**. 
 
-<insert usage image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Usage.JPG" style="zoom: 67%;" />
 
 The Flows in use chart can help see track the most triggered flow in the filtered data. In my scenario, I had an unusual number of daily flows from the Runs report and was able to isolate to the specific flow causing the increase. In the chart the "**Get D365 Msgs and Fire Pipeline**" [flow which monitors the Office 365 Communications API for current health and messages](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-dynamics-365-ce-service-health-and-messages-using-the-microsoft-office-365-service-communications-api). A sample of this flow is located **[here](https://github.com/aliyoussefi/MonitoringPowerPlatform/raw/PowerAutomate/Samples/GetDynamics365MessagesfromtheOffice365CommunicationsAPI_20200410121038.zip).** Further analysis of the capabilities of the Office 365 Service and Communications API are covered in another article related to overall service health.
 
-<insert flows in use chart>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Created.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Usage-FlowsInUse.JPG" style="zoom: 67%;" />
 
 [The **Created** report](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#created-report) displays the **types of flows created**, **trends** and **specific details** about created flows such as the **created date** and **email**.
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Created.JPG" style="zoom: 67%;" />
@@ -61,31 +59,45 @@ Finally, [the **Connectors** report]() let's admins examine the various connecto
 
 #### Filtering the data returned
 
-The Power Apps Analytics will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#how-do-i-change-environments), click the "**Change filters**" button for any dashboard.
+The Power Automate Analytics will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#how-do-i-change-environments), click the "**Change filters**" button for any dashboard.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Filters.JPG" style="zoom: 67%;" />
 
 #### Export data for Analysis
 
-Currently the ability to export from the Power Platform Admin Center is not available as it is with the Common Data Service for Analytics. I would expect this to change and will update this article once more information is available. Until then [**most charts can be exported via the ellipsis**](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#how-can-i-download-the-reports) like other Power BI reports. 
+Currently the ability to export from the **Power Platform Admin Center** is not available as it is with the **Common Data Service for Analytics**. I would expect this to change and will update this article once more information is available. Until then [**most charts can be exported via the ellipsis**](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#download-reports) like other **Microsoft Power BI** reports. 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Runs.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/ExportData.JPG" style="zoom: 67%;" />
 
 ## Service Health within the Power Platform Admin Center
 
-Recently announced in the Release Wave 1 for 2020 is a [unified service health experience within the Power Platform Admin Center](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/unified-service-health-experience-power-platform-admin-center). This will allow admins the ability to focus efforts within the PPAC, not having to navigate to the Office 365 Portal for service health. This reduces Environment Admins from potentially interacting with Office 365 items and to focus on the Power Platform specifically. [According to the article the ability to set up alerts for service outages will be coming as part of the September 2020 general availability](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/service-health-power-platform-admin-center).
+Recently announced in the **Release Wave 1 for 2020** is a [unified service health experience within the Power Platform Admin Center](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/unified-service-health-experience-power-platform-admin-center). This will allow admins the ability to focus efforts within the **Power Platform Admin Center**, not having to navigate to the **Office 365 Portal** for service health. This reduces Environment Admins from potentially interacting with Office 365 items and to focus on the **Power Platform** specifically. [According to the article the ability to set up alerts for service outages will be coming as part of the September 2020 general availability](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/service-health-power-platform-admin-center).
 
 ## My Flow Analytics
 
-[Announced in 2017](https://flow.microsoft.com/en-us/blog/announcing-microsoft-flow-analytics/), Microsoft Flows Analytics today are useful for makers who want to review the flows created in the My Flows area of the Maker Portal.
+[Announced in 2017](https://flow.microsoft.com/en-us/blog/announcing-microsoft-flow-analytics/), **Microsoft Flows Analytics** today are useful for makers who want to review the flows created in the **My Flows area of the Maker Portal**. To view these analytics, navigate to the **My Flows** area and select a flow. 
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/MyFlows-navigateTo.JPG" style="zoom: 67%;" />
 
+Once the **Overview window** opens, in the toolbar click the **Analytics** button.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/MyFlows-analyticsButton.JPG" style="zoom: 67%;" />
+
+**The Usage report** shows **total runs by day**, **number of runs** and **trending flow runs**. 
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/3-Flowanalytics.png" style="zoom: 67%;" />
+
+**The Errors report** shows **errors by day**, **errors by type** and **error details** which can all be filtered by a specific action in you flow.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/MyFlows-ErrorReport.JPG" style="zoom: 67%;" />
 
 ## Next Steps
 
-As the Power Apps Analytics feature evolves, I expect administrators will be given increased visibility and tooling to assist with the governance of Power Apps and Connectors. Until then continue exploring the dashboard and export capabilities to assist with unification of Power Apps and Connectors activity. Working with the data in all of the Analytics areas we can begin to better understand where users are most heavily active and stay on top of high impact issues.
+**Power Automate Analytics** is a powerful tool enabling administrators to view a wealth of information across environments for the **Power Automate** platform. These analytics can show trends and alert for issues that need further investigation. Continuing this series, we will examine further tools and mechanisms that help us better understand both user activity and how to monitor and troubleshoot individual flow runs.
 
-If you are interested in learning more about specialized guidance and training for monitoring the power platform, please contact your **Technical Account Manager** for further details. Your feedback is extremely valuable so please leave a comment below and i'll be happy to help where I can!
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. Your feedback is extremely valuable so please leave a comment below and I'll be happy to help where I can!
+
+Be sure to [subscribe to the official blog](https://flow.microsoft.com/en-us/blog/) from the **Power Automate** team to stay up to date on the latest news and offerings!
 
 ## Index
 
