added github issues link

--- a/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
+++ b/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
@@ -95,7 +95,9 @@ Once the **Overview window** opens, in the toolbar click the **Analytics** butto
 
 **Power Automate Analytics** is a powerful tool enabling administrators to view a wealth of information across environments for the **Power Automate** platform. These analytics can show trends and alert for issues that need further investigation. Continuing this series, we will examine further tools and mechanisms that help us better understand both user activity and how to monitor and troubleshoot individual flow runs.
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. Your feedback is extremely valuable so please leave a comment below and I'll be happy to help where I can!
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+
+Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
 Be sure to [subscribe to the official blog](https://flow.microsoft.com/en-us/blog/) from the **Power Automate** team to stay up to date on the latest news and offerings!
 
