added CDS-A images

--- a/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
+++ b/docs/02.01 - Monitoring Power Automate - Power Automate Analytics.md
@@ -4,7 +4,7 @@
 
 **[Microsoft Power Automate](https://docs.microsoft.com/en-us/power-automate/getting-started)** is a service allowing makers to create business processes, orchestrations and workflows to help achieve common and even complex business requirements. Within the Power Platform, Power Automate represents one of the most important pillars of the platform. It provides a no to low code solution to process automation. From sending **[push notifications to mobile devices](https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/add-notifications)**, to complex **[robotic process automation](https://flow.microsoft.com/en-us/ui-flows/)** flows, Power Automate can be used in virtually any workload.
 
-This purpose of this article is to examine the **[Power Auatomate Analytics](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow)** feature. We will review **current functionality** and report use cases within the analytics tool. The recently announced **unified service health** feature will also be referenced here.
+This purpose of this article is to examine the **[Power Automate Analytics](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow)** feature. We will review **current functionality** and report use cases within the analytics tool. The recently announced **unified service health** feature will also be referenced here.
 
 The article will also go into the **Analytics feature** available in the **My Flows** functionality of **Power Automate**, which allows Makers the ability to track metrics on their flows.
 
