--- a/docs/02.03 - Monitoring Model Driven Apps - Common Data Service for Analytics.md
+++ b/docs/02.03 - Monitoring Model Driven Apps - Common Data Service for Analytics.md
@@ -2,17 +2,17 @@
 
 ## Summary
 
-The idea of monitoring **Dynamics 365 or Model Driven Applications** is not a new concept. Understanding where services are **failing**, users are **interacting** with the platform, where **form** and **business processes** could be **tuned for performance** are key drivers for most if not all businesses, from small companies to enterprises. Luckily, the **Dynamics 365** platform provides many tools to help audit and monitor business and operational events.
+The idea of monitoring **Dynamics 365 or Model Driven Applications** is not a new concept. Understanding where services are **failing**, users are **interacting** with the platform, where **form** and **business processes** could be **tuned for performance** are key drivers for most if not all businesses, from small companies to enterprises. Luckily, the **Power Platform** provides many tools to help audit and monitor business and operational events.
 
 This article will cover locating and downloading environment analytics using the **Common Data Service for Analytics**. Questions regarding capacity and all up usage can be answered here. For operational events the **Release Wave 1 2020 for Power Apps** will be explored for feature announcement to allow for both manual and automated gathering and alerting. 
 
 ## Organization Insights / CDS for Analytics
 
-A Common Data Service specific feature is the former Organization Insights or now called the **Common Data Service for Analytics** or **CDS-A**. Its key to point out here that Organization Insights will no longer be supported in future releases per [this document](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service). Some of the key analytics compiled include **active user usage** and **operations performed**, **customizations used**, **storage consumed** and **failed workflows and API** calls.
+A **Common Data Service** specific feature is the former Organization Insights or now called the **Common Data Service for Analytics** or **CDS-A**. Its key to point out here that Organization Insights will no longer be supported in future releases per [this document](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service). Some of the key analytics compiled include **active user usage** and **operations performed**, **customizations used**, **storage consumed** and **failed workflows and API** calls.
 
 ### CDS for Analytics in the Power Platform Admin Center
 
-Analytics for the Common Data Service can be observed within the **Power Platform Admin Center**. To navigate to these analytics, simply expand the Analytics area of the PPAC and choose "**Common Data Service**".
+Analytics for the Common Data Service can be observed within the **Power Platform Admin Center**. To navigate to these analytics, simply expand the Analytics area of the **Power Platform Admin Center** and choose "**Common Data Service**".
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/PPAC-NavigateTo.JPG" style="zoom:50%;" />
 
@@ -20,29 +20,45 @@ Analytics for the Common Data Service can be observed within the **Power Platfor
 
 Its key here to point out that access to this data is limited based on user access to the CDS environment in combination with their Office 365 role. As shown in [this article](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#who-can-view-these-reports) there consist of various admin roles within Office 365 that will scope to specific reports. **Environment Admin will scope to environments the admin has access to** while other admin roles will expose every environment.
 
+The **Common Data Service for Analytics** accessibility is somewhat different than the other analytics features and I want to point out what I've seen. One common ask I get is how to allow analysts the ability to view this data without obtaining too much abilities that an Environment Admin would have. I've seen that giving the **Power Platform Admin role in Office 365** will set Environment Admin in each of the **Dynamics 365 environments** within the tenant. Removing this role from the user in the environments will restrict them from performing activities within the environment. *However they will be able to perform administration activities such as backups.*
+
 #### Navigating the Portal
 
-With the appropriate permissions, an admin will land on the **Home** dashboard for Common Data Service for Analytics. Below is an overview of each of the dashboards available currently.
-
-As described in the article, **each of these metrics is updated every 24 hours**.
+With the appropriate permissions, an admin will land on the **Home** dashboard for **Common Data Service for Analytics**. Below is an overview of each of the dashboards available currently.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Overview-Tabs.JPG)
 
-The **Home** dashboard includes the ability to filter to specific environments and time range to help focus on finding out more about a particular question. **Active Users, API Calls and Pass Rate** are shown as well as top **Plug-Ins by Failure**.
+As described in the article, **each of these metrics is updated every 24 hours**. I have seen this data presented within the same working day, so while the documentation details this you may see metrics sooner. 
+
+#### The Dashboards
+
+[The **Home** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#home-default) includes the ability to filter to specific environments and time range to help focus on finding out more about a particular question. **Active Users, API Calls and Pass Rate** are shown as well as top **Plug-Ins by Failure**.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Home-Overview.JPG" style="zoom:50%;" />
 
-[The **Active Users** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#active-users) is helpful to seeing which **users are most active** during what timeframe and what **operations are being performed by the most active users**. **Total operations** (*Create*, *Retrieve and RetrieveMultiple*, *Update* and *Delete*) per day and **total page requests** are shown with line charts.
+[The **Active Users** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#active-users) is helpful to see which **users are most active** during what timeframe and what **operations are being performed by the most active users**. **Total operations** (*Create*, *Retrieve and RetrieveMultiple*, *Update* and *Delete*) per day and **total page requests** are shown with line charts.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Overview-ActiveUsers.JPG" style="zoom: 50%;" />
+
+The Usage report is extremely helpful for insight into **user environment access** based on the filter set. This report can help answer questions such as **Who was logged in a given time** window and **when users are most active** in the environment.
 
 [The **Mode of Access** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#active-users) can help admins better understand **user client usage** (OS, device, browser type) and **active users by business units and security roles**.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-ModeOfAccess.JPG" style="zoom: 50%;" />
 
-[The **Entity Usage** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#active-users) displays the **most active entities** **by operation**, split by out of the box (OOB) and custom entities.
+The charts in the **Mode of Access report** can help answer questions about **recently introduced browsers or devices users are using to interact** with the platform. If we see a rise in errors we begin to examine if client usage plays a part. The **Active users by security role chart** can help identify roles during a time frame. If the particular **organization has multiple apps with access controlled by security roles**, this chart could prove helpful.
+
+<insert chart>
+
+[The **Entity Usage** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#active-users) displays the **most active entities** **by operation**, split by **out of the box (OOB)** and **custom entities**.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-EntityUsage.JPG" style="zoom: 50%;" />
+
+The most used custom entities chart helps visualize if a recent update made by my organization or from a vendor is being used. In the above image I can see the "*adx*" entities are being used which leads me to believe a **Power Apps Portal** is configured. 
+
+In the below image I can see that *bot content* has recently been created and updated with tells me a user has provisioned a **Microsoft Virtual Agent** and is authoring content.
+
+<insert most used entity image>
 
 [The **System Jobs** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#system-jobs) is useful to admins for help understanding **throughput numbers** and **pass rates**. The **active and top workflow reports** show the **top 10 most executed and failing workflows** for the overall specified time, while the **throughput metrics are broken down per hours**.
 
@@ -50,50 +66,68 @@ The **Home** dashboard includes the ability to filter to specific environments a
 
 
 
+The **System jobs execution and backlog chart** I find extremely useful and recommend reviewing this regularly. The below gif shows how to **filter down to a hourly window** and the **difference between the time shown on the chart and my filter**.
+
+<insert gif>
+
 Shown below is another dashboard I find very useful, [the **Plug-Ins** Dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#plug-ins). Within this dashboard, data points for **success or pass rate**, **number of executions**, **most active plug-ins** and **top plug-ins by failure** can be found.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Plugins.JPG)
+
+The **Average plug-in execution time chart** will visualize the averages based on our filtered time frame. Filtering can help reduce the scope so the average can be calculated from a more narrow number of plug-ins. Once an offending plug-in has been determined, analysts can use additional tools offered by the Power Platform to further drill down to specific executions.
+
+<show average execution image>
 
 [The **Mailbox Usage** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#mailbox-usage) enables admins to visualize **mailbox configurations** and **active email mailboxes and profiles**. Utilizing data from [Server-side Synchronization](https://docs.microsoft.com/en-us/power-platform/admin/server-side-synchronization), admins can review **incoming and outgoing configurations**, **which mailboxes are enabled** and **how many are using the service**.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-MailboxUsage.JPG)
 
-The Common Data Service API is heavily used in the Power Apps platform and the final dashboard, [the **API Calls Statistics** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#api-call-statistics). This dashboard will help admins see the API success rate, most used API calls, all up API calls and top failing API calls.
+The **Common Data Service API** is heavily used in the **Power Apps platform** and the final dashboard, [the **API Calls Statistics** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#api-call-statistics) contains rich data points. This dashboard will help admins see the **API success rate**, **most used API calls**, **all up API calls** and **top failing API calls**.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-API-Calls.JPG)
 
+At the bottom of this dashboard is **the Total API calls chart**. This chart is useful to investigate when the platform may be **experiencing significant demand** and **which calls are being used**. From there, we can identify where improvements could be made with techniques such as **batching or caching** to reduce the number of calls made.
+
+<Total API Calls Image>
+
 #### Filtering the data returned
 
-The Common Data Service for Analytics will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#view-data-for-different-environments-and-date-time-ranges), click the "**Change filters**" button for any dashboard.
+The **Common Data Service for Analytics** will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#view-data-for-different-environments-and-date-time-ranges), click the "**Change filters**" button for any dashboard.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Filter.JPG" style="zoom:33%;" />
 
+The filter can be as broad as an entire month or can be as specific as any hour within a given day. I find that starting with the broad filter allows me a better understanding of overall usage. From there, I can begin to drill down into specific time frames for further analysis.
+
 #### Export data for Analysis
 
-Data from the Common Data Service for Analytics dashboards can be exported to an Microsoft Excel spreadsheet for further review and storage by clicking the "Download" button. As the image below shows, data points can be collected that may not necessarily be visualized in the PPAC.
+Data from the **Common Data Service for Analytics** dashboards can be exported to an **Microsoft Excel** spreadsheet for further review and storage by clicking the **"Download"** button. As the image below shows, data points can be collected that may not necessarily be visualized in the **Power Platform Admin Center**.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Download-AvailableOptions.JPG" style="zoom:33%;" />
 
-The data included in the downloaded spreadsheet will present more data than shown in the dashboard reports. For instance the API Used spreadsheet shows operations for each entity down to a single call.
+The data included in the downloaded spreadsheet will present more data than shown in the dashboard reports. For instance the **API Used** spreadsheet shows operations for each entity down to a single call.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Overview-API-MostUsedAPI-Excel.JPG)
 
-These spreadsheets can be used as a source for Microsoft Power BI reports or even uploaded to Azure Application Insights, Azure Log Analytics for Azure Blob Storage for extended capabilities. 
+These spreadsheets can be used as a source for **Microsoft Power BI** reports or even **uploaded to Azure Application Insights, Azure Log Analytics for Azure Blob Storage** for extended capabilities. 
 
 ### Common Data Service for Analytics PowerShell cmdlets
 
-Starting in July 2020 the [**PowerShell cmdlets for Power Apps**](https://www.powershellgallery.com/packages/Microsoft.PowerApps.Administration.PowerShell/2.0.56) will be **[generally available](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/powershell-cmdlets-power-apps-admins-are-generally)** allowing for automation of tasks typically performed in the Power Platform Admin Center. [These commands](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#powerapps-cmdlets-for-administrators-preview) allow admins the ability to perform management tasks on environments and environment permissions. Admins can govern CDS and underlying technologies such as custom connectors, Power Automate Flows, CDS databases, Canvas Apps, etc. 
+Starting in July 2020 the [**PowerShell cmdlets for Power Apps**](https://www.powershellgallery.com/packages/Microsoft.PowerApps.Administration.PowerShell/2.0.56) will be **[generally available](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/powershell-cmdlets-power-apps-admins-are-generally)** allowing for automation of tasks typically performed in the **Power Platform Admin Center**. [These commands](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#powerapps-cmdlets-for-administrators-preview) allow admins the ability to perform management tasks on environments and environment permissions. Admins can govern CDS and underlying technologies such as **custom connectors**, **Power Automate Flows,** **CDS databases**, **Canvas Apps**, etc. 
 
 According to the [Release Wave 1 2020 article](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/powershell-cmdlets-power-automate-admins-are-generally), new cmdlets will be available allowing for managing capacity, user permissions and lifecycle operations for an environment. 
 
 ### Service Health within the Power Platform Admin Center
 
-Recently announced in the Release Wave 1 for 2020 is a [unified service health experience within the Power Platform Admin Center](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/unified-service-health-experience-power-platform-admin-center). This will allow admins the ability to focus efforts within the PPAC and not have to navigate to the Office 365 Portal or build automation for service health. This can also provide the potential to limit the environment admins from interacting with Office 365 items like Active Users and Licenses, Groups, Subscriptions, etc. [According to the article the ability to set up alerts for service outages will be coming as part of the September 2020 general availability](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/service-health-power-platform-admin-center).
+**Service Health** for the **Common Data Service** can be found within the **Office 365 Admin Portal** by navigating to https://portal.office.com/adminportal. **Current health** as well as **advisories** are shown. Messages for **important updates** such as **planned maintenance** can also be found here. Both the service health and messaging allow for email delivery. Currently this is limited to two so consider ways to broadcast this via distribution lists, Office Groups, or Microsoft Team channels!
 
 ## Next Steps
 
-As the Common Data Service for Analytics feature evolves, I expect administrators will be given increased visibility and tooling to assist with the governance of CDS environments. Until then continue exploring the dashboard and export capabilities to assist with unification of CDS environment activity. As touched on briefly, there are mechanisms available now to help build custom reporting and alerting which will be elaborated on in another article.
+As the **Common Data Service for Analytics** feature evolves, I expect administrators will be given increased visibility and tooling to assist with the governance of CDS environments. Until then continue exploring the dashboard and export capabilities to assist with unification of CDS environment activity. As touched on briefly, there are mechanisms available now to help build custom reporting and alerting which will be elaborated on in another article.
 
-If you are interested in learning more about specialized guidance and training for monitoring the power platform, please contact your **Technical Account Manager** for further details. Your feedback is extremely valuable so please leave a comment below and i'll be happy to help where I can!
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
-Ali Youssefi
+Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
+
+## Index
+
+[Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction)
