added total api call image

--- a/docs/02.03 - Monitoring Model Driven Apps - Common Data Service for Analytics.md
+++ b/docs/02.03 - Monitoring Model Driven Apps - Common Data Service for Analytics.md
@@ -50,6 +50,8 @@ The charts in the **Mode of Access report** can help answer questions about **re
 
 <insert chart>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
+
 [The **Entity Usage** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#active-users) displays the **most active entities** **by operation**, split by **out of the box (OOB)** and **custom entities**.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-EntityUsage.JPG" style="zoom: 50%;" />
@@ -59,6 +61,8 @@ The most used custom entities chart helps visualize if a recent update made by m
 In the below image I can see that *bot content* has recently been created and updated with tells me a user has provisioned a **Microsoft Virtual Agent** and is authoring content.
 
 <insert most used entity image>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
 
 [The **System Jobs** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#system-jobs) is useful to admins for help understanding **throughput numbers** and **pass rates**. The **active and top workflow reports** show the **top 10 most executed and failing workflows** for the overall specified time, while the **throughput metrics are broken down per hours**.
 
@@ -70,6 +74,8 @@ The **System jobs execution and backlog chart** I find extremely useful and reco
 
 <insert gif>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
+
 Shown below is another dashboard I find very useful, [the **Plug-Ins** Dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#plug-ins). Within this dashboard, data points for **success or pass rate**, **number of executions**, **most active plug-ins** and **top plug-ins by failure** can be found.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Plugins.JPG)
@@ -77,6 +83,8 @@ Shown below is another dashboard I find very useful, [the **Plug-Ins** Dashboard
 The **Average plug-in execution time chart** will visualize the averages based on our filtered time frame. Filtering can help reduce the scope so the average can be calculated from a more narrow number of plug-ins. Once an offending plug-in has been determined, analysts can use additional tools offered by the Power Platform to further drill down to specific executions.
 
 <show average execution image>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
 
 [The **Mailbox Usage** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#mailbox-usage) enables admins to visualize **mailbox configurations** and **active email mailboxes and profiles**. Utilizing data from [Server-side Synchronization](https://docs.microsoft.com/en-us/power-platform/admin/server-side-synchronization), admins can review **incoming and outgoing configurations**, **which mailboxes are enabled** and **how many are using the service**.
 
@@ -88,7 +96,7 @@ The **Common Data Service API** is heavily used in the **Power Apps platform** a
 
 At the bottom of this dashboard is **the Total API calls chart**. This chart is useful to investigate when the platform may be **experiencing significant demand** and **which calls are being used**. From there, we can identify where improvements could be made with techniques such as **batching or caching** to reduce the number of calls made.
 
-<Total API Calls Image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CDSA/CDSA-Overview-API-MostUsedAPI.JPG"  />
 
 #### Filtering the data returned
 
